Fixes missing filter on ineritable root element of a Listing

--- a/config/locales/arb/complement.yml
+++ b/config/locales/arb/complement.yml
@@ -41,6 +41,105 @@ arb:
 
     legal_entity:
 
+    listing:
+      root_model:
+        account: "الحساب"
+        account_balance: "رصيد الحساب"
+        area: "المنطقة البريدية"
+        bank_statement: "بيان الحساب المصرفي"
+        building: "موقع التخزين"
+        cash: "الخزينة"
+        catalog: "فئة الفرد"
+        company: "الشركة"
+        contact: "الاتصالات"
+        currency: "العملة"
+        custom_field: "الحقول التكميلية"
+        custom_field_choice: "اختيار الحقل التكميلي"
+        custom_field_datum: "بيانات الملف التكميلية"
+        delay: "التأجيل"
+        delivery: "التسليم"
+        delivery_item: "خط التسليم"
+        delivery_mode: "نمط التسليم"
+        department: "الخجمة"
+        deposit: "الاقتطاع المصرفي"
+        district: "مقاطعة"
+        document: "الوثيقة"
+        document_template: "نموذج الوثيقة"
+        entity: "الفرد"
+        entity_category: "فئة الفرد"
+        entity_event: "الحدث"
+        entity_event_nature: "نوع الحدث"
+        entity_link: "رابط الفرد"
+        entity_link_nature: "طبيعة الرابط بين الافراد"
+        entity_nature: "نوع الفرد"
+        equipment: "الاداة"
+        establishment: "المؤسسة"
+        event: "الحدث"
+        event_nature: "نوع الحدث"
+        financial_year: "السنة المالية"
+        incoming_payment: "الدفعة"
+        incoming_payment_mode: "نوع الدفعة"
+        incoming_payment_use: "تأثير الدفعة"
+        inventory: "عملية الجرد"
+        inventory_item: "طريقة عملية الجرد"
+        journal: "الدفتر اليومي"
+        journal_entry: "المدخلات"
+        journal_record: "سجل المحاسبة"
+        land_parcel: "الكتلة"
+        listing: "الاستخراج"
+        listing_node: "عقدة الاستخراج"
+        listing_node_item: "عنصر غقدة الاستخراج"
+        mandate: "التفويض"
+        meeting: "الحدث"
+        meeting_nature: "نوع الحدث"
+        observation: "ملاحظة"
+        operation: "العمل"
+        operation_item: "الواردات/الصادرات"
+        operation_nature: "نوع العمل"
+        operation_use: "الاداة المستخدمة"
+        outgoing_payment: "الدفعة"
+        outgoing_payment_mode: "نوع الدفعة"
+        outgoing_payment_use: "تأثير الدفعة"
+        parameter: "الاعدادات"
+        price: "الاسعار"
+        product: "الانتاج"
+        product_category: "فئة الانتاج"
+        product_component: "عنصر الانتاج"
+        product_move: "حركة السهم"
+        product_nature: "الانتاج"
+        product_nature_category: "فئة الانتاج"
+        product_nature_component: "عنصر الانتاج"
+        product_nature_price: "الاسعار"
+        product_price_listing: "فئة الفرد"
+        product_price_template: "الاسعار"
+        product_stock: "سهم الانتاج"
+        product_stock_move: "حركة السهم"
+        product_transfer: "تحول او ضياع السهم"
+        products_nature: "الانتاج"
+        profession: "المهنة"
+        purchase: "الشراء"
+        purchase_item: "طريقة طلب الشراء"
+        role: "الدور"
+        sale: "البيع"
+        sale_item: "طريقة طلب البيع"
+        sale_nature: "نوع طلب البيع"
+        sales_invoice: "الفاتورة"
+        sales_invoice_item: "طريقة تسديد الفاتورة"
+        sequence: "التسلسل"
+        stock: "سهم الانتاج"
+        stock_move: "حركة السهم"
+        stock_transfer: "تحول او ضياع السهم"
+        subscription: "الاشتراك"
+        subscription_nature: "نوع الاشتراك"
+        tax: "الضريبة"
+        tax_declaration: "تصريح الضرائب"
+        team: "الخجمة"
+        tool: "الاداة"
+        tracking: "حصة ممكن عزوها"
+        transfer: "التحويل"
+        transport: "وسيلة النقل"
+        unit: "الوحدة"
+        user: "المستخدم"
     matter:
 
     medicine:
