--- a/config/locales/fra/complement.yml
+++ b/config/locales/fra/complement.yml
@@ -4,7 +4,12 @@
 fra:
   enumerize:
     activity:
-
+      family:
+        animal_farming: "Élevage"
+        exploitation: "Exploitation"
+        handicraft: "Artisanat"
+        service: "Service"
+        vegetal_crops: "Production végétale"
     animal:
       variety:
         animal: "Animaux"
@@ -166,7 +171,10 @@ fra:
         sir: "Monsieur"
         syndicate: "Syndicat"
     entity_link:
-
+      nature:
+        direct_kinship: "Parenté directe"
+        undefined: "Indéfini"
+        work: "Collaboration"
     immatter:
       variety:
         animal: "Animaux"
@@ -186,7 +194,9 @@ fra:
         worker: "Travailleur"
         zone: "Zone physique"
     incident:
-
+      nature:
+        incident: "Incident"
+        pathology: "Pathologie"
     indicator_datum:
       indicator:
         animal_disease_state: "Phase du bioprocessus de maladie d’un animal"
@@ -247,9 +257,52 @@ fra:
         ton: "tonne"
         unity: "unité"
     intervention:
-
+      reference_name:
+        animal_birth: "Naissance d’un animal"
+        animal_milking: "Traite"
+        animal_treatment: "Traitement animal"
+        calving_one: "Vêlage unique"
+        calving_twin: "Vêlage jumeaux"
+        chemical_treatment: "Traitement chimique"
+        grains_harvest: "Moisson"
+        mineral_fertilizing: "Fertilisation minérale"
+        organic_fertilizing: "Fertilisation organique"
+        partial_chemical_treatment: "Traitement chimique partiel"
+        plant_grinding: "Broyage de végétaux"
+        plant_mowing: "Fauchage"
+        plowing: "Labour"
+        raking: "Hersage"
+        sowing: "Semis"
+        straw_bunching: "Pressage de fourrages"
+        superficial_plowing: "Hersage"
+        wheat_crop: "Culture de blé (standard)"
     intervention_cast:
-
+      reference_name:
+        cropper: "Moissonneuse batteuse"
+        cropper_driver: "Conducteur de moissonneuse batteuse"
+        culture: "Culture"
+        driver: "Conducteur"
+        fertilizer: "Engrais"
+        fertilizer_to_spread: "Engrais à épandre"
+        grains: "Grains"
+        grinder: "Broyeur"
+        harrow: "Herse"
+        land_parcel: "Parcelle"
+        manure: "Fumier"
+        manure_to_spread: "Fumier à épandre"
+        molecule: "Molécule"
+        mother_animal: "Mère"
+        plant: "Plantes, Culture"
+        plow: "Charrue"
+        seeder: "Semoir"
+        seeds: "Semences"
+        seeds_to_sow: "Semence à semer"
+        silo: "Silo"
+        sower: "Semoir"
+        spreader: "Épandeur"
+        straw: "Paille"
+        tractor: "Tracteur"
+        trailer: "Remorque"
     inventory_item:
       unit:
         are: "are"
@@ -321,6 +374,133 @@ fra:
         public_interest_group: "Groupement d’intérêt public"
         sir: "Monsieur"
         syndicate: "Syndicat"
+    listing:
+      root_model:
+        account: "Compte comptable"
+        account_balance: "Balance de compte"
+        activity: "Activité"
+        affair: "Affaire"
+        analytic_repartition: "Répartition analytique"
+        animal: "Animal"
+        animal_group: "Groupe d’animaux"
+        animal_medicine: "Produits vétérinaires"
+        area: "Zone postale"
+        asset: "Immobilisation"
+        asset_depreciation: "Amortissement d’immobilisation"
+        bank_statement: "Relevé de compte bancaire"
+        bioproduct: "Produit vivant"
+        building: "Lieu de stockage"
+        building_division: "Pièce"
+        campaign: "Campagne"
+        cash: "Trésorerie"
+        cash_transfer: "Virement interne"
+        catalog: "Liste de prix"
+        catalog_price: "Prix"
+        cultivable_land_parcel: "Parcelle culturale"
+        custom_field: "Champ complémentaire"
+        custom_field_choice: "Choix de champ complémentaire"
+        deposit: "Remise en banque"
+        deposit_item: "Ligne de remise en banque"
+        district: "Zone administrative"
+        document: "Document"
+        document_archive: "Archive de document"
+        document_template: "Modèle de document"
+        easement: "Zone primaire"
+        entity: "Personne"
+        entity_address: "Adresse"
+        entity_link: "Lien de personne"
+        equipment: "Outil"
+        establishment: "Établissement"
+        event: "Évènement"
+        event_nature: "Type d’évènement"
+        event_participation: "Participation à un évènement"
+        financial_year: "Exercice"
+        fungus: "Champignon"
+        immatter: "Immatériel"
+        incident: "Incident"
+        incoming_delivery: "Approvisionnement"
+        incoming_delivery_item: "Élément d’approvisionnement"
+        incoming_delivery_mode: "Mode d’approvisionnement"
+        incoming_payment: "Encaissement"
+        incoming_payment_mode: "Mode d’encaissement"
+        intervention: "Procédure"
+        intervention_cast: "Variable de procédure"
+        inventory: "Inventaire"
+        inventory_item: "Ligne d’inventaire"
+        journal: "Journal"
+        journal_entry: "Écriture"
+        journal_entry_item: "Ligne d’écriture"
+        land_parcel: "Parcelle"
+        land_parcel_cluster: "Îlot"
+        land_parcel_group: "Ilôt"
+        legal_entity: "Personne morale"
+        listing: "Extraction"
+        listing_node: "Nœud d’extraction"
+        listing_node_item: "Élément de nœud d’extraction"
+        log: "Évènements des produits"
+        mandate: "Responsabilité"
+        matter: "Matière"
+        medicine: "Médicament"
+        meeting: "Évènement"
+        meeting_nature: "Type d’évènement"
+        meeting_participation: "Participation à un évènement"
+        mineral_matter: "Matière minérale"
+        observation: "Observation"
+        operation: "Opération"
+        operation_task: "Tâche"
+        organic_matter: "Matière organique"
+        outgoing_delivery: "Livraison"
+        outgoing_delivery_item: "Ligne de livraison"
+        outgoing_delivery_mode: "Mode de livraison"
+        outgoing_payment: "Décaissement"
+        outgoing_payment_mode: "Mode de décaissement"
+        person: "Personne"
+        plant: "Plante"
+        plant_medicine: "Produit phytosanitaire"
+        preference: "Préférence"
+        prescription: "Prescription"
+        procedure: "Procédure"
+        procedure_variable: "Variable de procédure"
+        product: "Produits"
+        product_group: "Groupe de produit"
+        product_indicator_datum: "Valeur d’indicateur"
+        product_link: "Lien entre produits"
+        product_localization: "Passage d’un produit en un lieu"
+        product_membership: "Passage d’un produit dans un groupe"
+        product_move: "Mouvement de stock"
+        product_nature: "Type de produit"
+        product_nature_variant: "Variante de type de produit"
+        product_nature_variant_indicator_datum: "Valeur d’indicateur de variante"
+        product_ownership: "Propriété de produit"
+        product_process: "Processus"
+        product_process_phase: "Phase de processus"
+        production: "Production"
+        production_support: "Support de production"
+        profession: "Profession"
+        property_title: "Titre de propriété"
+        purchase: "Achat"
+        purchase_item: "Ligne d’achat"
+        purchase_nature: "Type d’achat"
+        role: "Rôle"
+        sale: "Vente"
+        sale_item: "Ligne de vente"
+        sale_nature: "Type de vente"
+        sequence: "Séquence"
+        service: "Service"
+        settlement: "Installation"
+        sub_zone: "Sous-zone"
+        subscription: "Abonnement"
+        subscription_nature: "Type d’abonnement"
+        tax: "Taxe"
+        tax_declaration: "Déclaration de taxes"
+        team: "Service"
+        tracking: "Lot traçable"
+        transfer: "Transfert"
+        transport: "Transport"
+        user: "Utilisateur"
+        worker: "Travailleur"
+        zone: "Zone"
+        zone_property_title: "Titre de propriété foncière"
     matter:
       variety:
         animal: "Animaux"
@@ -358,7 +538,30 @@ fra:
         worker: "Travailleur"
         zone: "Zone physique"
     operation_task:
-
+      nature:
+        assisted_measurement: "%{reporter} mesure %{indicator} avec %{tool}"
+        attachment: "On attache %{carrier} et %{carried}"
+        browsing: "%{browser} parcourt %{browsed}"
+        consumption: "%{absorber} consomme %{product}"
+        creation: "%{producer} produit %{product}"
+        death: "%{product} meurt"
+        detachment: "On détache %{carrier} et %{carried}"
+        division: "%{product} est séparé de %{producer}"
+        entering: "%{product} entre dans %{localizable}"
+        given_home_coming: "%{product} va l'emplacement par défaut de  %{localizable}"
+        group_exclusion: "%{member} sort du groupe %{group}"
+        group_inclusion: "%{member} entre dans le groupe %{group}"
+        home_coming: "%{product} va à son emplacement par défaut"
+        identified_incoming_delivery: "%{product} est réceptionné du %{supplier}"
+        identified_outgoing_delivery: "%{product} est expédié à %{client}"
+        incoming_delivery: "%{product} est réceptionné"
+        measurement: "%{reporter} mesure %{indicator}"
+        merging: "%{absorber} fusionne avec %{product}"
+        movement: "%{product} va à l'emplacement de %{localizable}"
+        outgoing_delivery: "%{product} est expédié"
+        owner_change: "%{product} change de propriétaire pout %{owner}"
+        ownership_loss: "%{product} perd son propriétaire"
+        simple_measurement: "%{indicator} est mesuré"
     person:
       nature:
         association: "Association"
@@ -609,7 +812,10 @@ fra:
         urea_concentration: "Teneur moyenne en urée"
         usage_duration: "Durée d'utilisation"
     subscription_nature:
-
+      entity_link_nature:
+        direct_kinship: "Parenté directe"
+        undefined: "Indéfini"
+        work: "Collaboration"
     tax:
       reference_name:
         fr_vat_intermediate: "TVA 10.00%"
