--- a/config/locales/eng/complement.yml
+++ b/config/locales/eng/complement.yml
@@ -260,6 +260,165 @@ eng:
         public_interest_group: "Public interest group"
         sir: "Sir"
         syndicate: "Syndicate"
+    listing:
+      root_model:
+        account: "Account"
+        account_balance: "Account balance"
+        activity: "Activity"
+        affair: "Affair"
+        analytic_repartition: "Analytic repartition"
+        animal: "Animal"
+        animal_diagnostic: "Animal diagnostic"
+        animal_disease: "Animal disease"
+        animal_drug: "Animal drug"
+        animal_drug_nature: "Animal drug type"
+        animal_event: "Animal event"
+        animal_event_nature: "Animal event type"
+        animal_group: "Animal group"
+        animal_posology: "Animal posology"
+        animal_prescription: "Animal prescription"
+        animal_race: "Animal race"
+        animal_race_nature: "Animal race type"
+        animal_treatment: "Animal treatment"
+        area: "Area"
+        asset: "Asset"
+        asset_depreciation: "Asset depreciation"
+        bank_statement: "Bank statement"
+        bioproduct: "Living product"
+        building: "Building"
+        building_division: "Room / Zone"
+        campaign: "Campaign"
+        cash: "Cash"
+        cash_transfer: "Cash transfer"
+        catalog: "Person category"
+        company: "Company"
+        contact: ""
+        cultivation: "Cultivation"
+        custom_field: "Complement field"
+        custom_field_choice: "Complement field choice"
+        custom_field_datum: "Complement datum"
+        delay: "Delay"
+        department: "Department"
+        deposit: "Deposit"
+        deposit_item: "Deposit line"
+        deposit_line: "Deposit line"
+        district: "District"
+        document: "Document"
+        document_template: "Document template"
+        easement: "Easement"
+        entity: "Person"
+        entity_address: "Address"
+        entity_category: "Person category"
+        entity_event: "Event"
+        entity_event_nature: "Event type"
+        entity_link: "Person link"
+        entity_link_nature: "Person link type"
+        entity_nature: "Person type"
+        equipment: "Tool"
+        establishment: "Establishment"
+        event: "Event"
+        event_nature: "Event type"
+        financial_year: "Financial year"
+        fungus: "Fungus"
+        incoming_delivery: "Purchase delivery"
+        incoming_delivery_item: "Purchase delivery line"
+        incoming_delivery_line: "Purchase delivery line"
+        incoming_delivery_mode: "Purchase delivery mode"
+        incoming_payment: "Incoming payment"
+        incoming_payment_mode: "Incoming payment mode"
+        incoming_payment_use: "Incoming payment part"
+        intervention: "Procedure"
+        inventory: "Inventory"
+        inventory_item: "Inventory line"
+        inventory_line: "Inventory line"
+        journal: "Journal"
+        journal_entry: "Journal entry"
+        journal_entry_item: "Journal entry line"
+        journal_entry_line: "Journal entry line"
+        land_parcel: "Land parcel"
+        land_parcel_group: "Land parcel group"
+        land_parcel_kinship: "Land parcel kinship"
+        listing: "Listing"
+        listing_node: "Listing node"
+        listing_node_item: "Listing node item"
+        log: "Animal event"
+        mandate: "Mandate"
+        matter: "Matter"
+        meeting: "Event"
+        meeting_nature: "Event type"
+        observation: "Observation"
+        operation: "Operation"
+        operation_item: "Operation line"
+        operation_line: "Operation line"
+        operation_nature: "Operation type"
+        operation_use: "Tool use"
+        outgoing_delivery: "Delivery"
+        outgoing_delivery_item: "Delivery line"
+        outgoing_delivery_line: "Delivery line"
+        outgoing_delivery_mode: "Delivery mode"
+        outgoing_payment: "Disbursement"
+        outgoing_payment_mode: "Disbursement mode"
+        outgoing_payment_use: "Disbursement part"
+        place: "Place"
+        plant: "Plant"
+        preference: "Preference"
+        price: "Price"
+        procedure: "Procedure"
+        product: "Animal"
+        product_category: "Product category"
+        product_component: "Product component"
+        product_event: "Animal event"
+        product_event_nature: "Animal event type"
+        product_group: "Animal group"
+        product_move: "Stock move"
+        product_nature: "Product"
+        product_nature_category: "Product category"
+        product_nature_component: "Product component"
+        product_nature_price: "Price"
+        product_price_listing: "Person category"
+        product_price_template: "Price"
+        product_specy: "Animal race"
+        product_stock: "Stock"
+        product_stock_move: "Stock move"
+        product_transfer: "Stock transfer"
+        product_variety: "Animal race"
+        production: "Production"
+        production_chain: "Production chain"
+        production_chain_conveyor: "Production chain conveyor"
+        production_chain_work_center: "Production chain work center"
+        production_chain_work_center_use: "Production chain work center use"
+        products_nature: "Product"
+        profession: "Profession"
+        purchase: "Purchase order"
+        purchase_item: "Purchase order line"
+        purchase_line: "Purchase order line"
+        purchase_nature: "Purchase nature"
+        role: "Role"
+        sale: "sale"
+        sale_item: "sale line"
+        sale_line: "sale line"
+        sale_nature: "sale type"
+        sequence: "Sequence"
+        service: "Service"
+        settlement: "Settlement"
+        stock: "Stock"
+        stock_move: "Stock move"
+        stock_transfer: "Stock transfer"
+        sub_zone: "Sub-zone"
+        subscription: "Subscription"
+        subscription_nature: "Subscription type"
+        tax: "Tax"
+        tax_declaration: "Tax declaration"
+        team: "Department"
+        tool: "Tool"
+        tool_nature: "Tool type"
+        tracking: "Tracking"
+        tracking_state: "Tracking state"
+        transfer: "Transfer"
+        transport: "Transport"
+        unit: "Unit"
+        user: ""
+        zone: "Zone"
     matter:
       variety:
         animal: "Animal"
