--- a/config/locales/eng/nomenclatures.yml
+++ b/config/locales/eng/nomenclatures.yml
@@ -283,6 +283,13 @@ eng:
         young_animal_product: "Young animal product" #?
         # young_animal_revenues: "Animaux reproducteurs (jeunes de renouvellement)"
       name: "Name"
+    activity_families:
+      items:
+        # animal_farming: "Élevage"
+        # exploitation: "Exploitation"
+        # handicraft: "Artisanat"
+        # service: "Service"
+        # vegetal_crops: "Production végétale"
     countries:
       items:
         ad: "Andorra"
@@ -736,6 +743,11 @@ eng:
         # stocks: "Stocks"
         # transport: "Transport"
         # veterinary_booklet: "Carnet vétérinaire"
+    entity_link_natures:
+      items:
+        # direct_kinship: "Parenté directe"
+        # undefined: "Indéfini"
+        # work: "Collaboration"
     entity_natures:
       items:
         association: "Association"
@@ -754,6 +766,10 @@ eng:
         public_interest_group: "Public interest group"
         sir: "Sir"
         syndicate: "Syndicate"
+    incidents:
+      items:
+        # incident: "Incident"
+        # pathology: "Pathologie"
     indicators:
       attributes:
         choice: "Choice"
