--- a/config/locales/spa/nomenclatures.yml
+++ b/config/locales/spa/nomenclatures.yml
@@ -228,6 +228,13 @@ spa:
         # young_animal_expenses: "Animaux reproducteurs (jeunes de renouvellement)"
         # young_animal_revenues: "Animaux reproducteurs (jeunes de renouvellement)"
       # name: "Code comptable"
+    activity_families:
+      items:
+        # animal_farming: "Élevage"
+        # exploitation: "Exploitation"
+        # handicraft: "Artisanat"
+        # service: "Service"
+        # vegetal_crops: "Production végétale"
     countries:
       items:
         ad: "Andorra"
@@ -687,6 +694,11 @@ spa:
         # stocks: "Stocks"
         # transport: "Transport"
         # veterinary_booklet: "Carnet vétérinaire"
+    entity_link_natures:
+      items:
+        # direct_kinship: "Parenté directe"
+        # undefined: "Indéfini"
+        # work: "Collaboration"
     entity_natures:
       items:
         # association: "Association"
@@ -705,6 +717,10 @@ spa:
         # public_interest_group: "Groupement d’intérêt public"
         # sir: "Monsieur"
         # syndicate: "Syndicat"
+    incidents:
+      items:
+        # incident: "Incident"
+        # pathology: "Pathologie"
     indicators:
       attributes:
         # choice: "Choix"
