--- a/config/locales/fra/complement.yml
+++ b/config/locales/fra/complement.yml
@@ -22,6 +22,7 @@ fra:
         organic_matter: "Matières organiques"
         phytosanitary: "Produits phytosanitaires"
         plant: "Végétaux"
+        plant_food: "Nourriture végétale"
         product: "Produits"
         product_group: "Groupe de produits"
         property_title: "Titre de propriété"
@@ -40,6 +41,7 @@ fra:
         organic_matter: "Matières organiques"
         phytosanitary: "Produits phytosanitaires"
         plant: "Végétaux"
+        plant_food: "Nourriture végétale"
         product: "Produits"
         product_group: "Groupe de produits"
         property_title: "Titre de propriété"
@@ -58,6 +60,7 @@ fra:
         organic_matter: "Matières organiques"
         phytosanitary: "Produits phytosanitaires"
         plant: "Végétaux"
+        plant_food: "Nourriture végétale"
         product: "Produits"
         product_group: "Groupe de produits"
         property_title: "Titre de propriété"
@@ -76,6 +79,7 @@ fra:
         organic_matter: "Matières organiques"
         phytosanitary: "Produits phytosanitaires"
         plant: "Végétaux"
+        plant_food: "Nourriture végétale"
         product: "Produits"
         product_group: "Groupe de produits"
         property_title: "Titre de propriété"
@@ -146,6 +150,7 @@ fra:
         organic_matter: "Matières organiques"
         phytosanitary: "Produits phytosanitaires"
         plant: "Végétaux"
+        plant_food: "Nourriture végétale"
         product: "Produits"
         product_group: "Groupe de produits"
         property_title: "Titre de propriété"
@@ -187,6 +192,7 @@ fra:
         organic_matter: "Matières organiques"
         phytosanitary: "Produits phytosanitaires"
         plant: "Végétaux"
+        plant_food: "Nourriture végétale"
         product: "Produits"
         product_group: "Groupe de produits"
         property_title: "Titre de propriété"
@@ -332,6 +338,7 @@ fra:
         organic_matter: "Matières organiques"
         phytosanitary: "Produits phytosanitaires"
         plant: "Végétaux"
+        plant_food: "Nourriture végétale"
         product: "Produits"
         product_group: "Groupe de produits"
         property_title: "Titre de propriété"
@@ -350,6 +357,7 @@ fra:
         organic_matter: "Matières organiques"
         phytosanitary: "Produits phytosanitaires"
         plant: "Végétaux"
+        plant_food: "Nourriture végétale"
         product: "Produits"
         product_group: "Groupe de produits"
         property_title: "Titre de propriété"
@@ -513,6 +521,7 @@ fra:
         organic_matter: "Matières organiques"
         phytosanitary: "Produits phytosanitaires"
         plant: "Végétaux"
+        plant_food: "Nourriture végétale"
         product: "Produits"
         product_group: "Groupe de produits"
         property_title: "Titre de propriété"
@@ -531,6 +540,7 @@ fra:
         organic_matter: "Matières organiques"
         phytosanitary: "Produits phytosanitaires"
         plant: "Végétaux"
+        plant_food: "Nourriture végétale"
         product: "Produits"
         product_group: "Groupe de produits"
         property_title: "Titre de propriété"
@@ -592,6 +602,7 @@ fra:
         organic_matter: "Matières organiques"
         phytosanitary: "Produits phytosanitaires"
         plant: "Végétaux"
+        plant_food: "Nourriture végétale"
         product: "Produits"
         product_group: "Groupe de produits"
         property_title: "Titre de propriété"
@@ -610,6 +621,7 @@ fra:
         organic_matter: "Matières organiques"
         phytosanitary: "Produits phytosanitaires"
         plant: "Végétaux"
+        plant_food: "Nourriture végétale"
         product: "Produits"
         product_group: "Groupe de produits"
         property_title: "Titre de propriété"
@@ -677,6 +689,7 @@ fra:
         organic_matter: "Matières organiques"
         phytosanitary: "Produits phytosanitaires"
         plant: "Végétaux"
+        plant_food: "Nourriture végétale"
         product: "Produits"
         product_group: "Groupe de produits"
         property_title: "Titre de propriété"
@@ -695,6 +708,7 @@ fra:
         organic_matter: "Matières organiques"
         phytosanitary: "Produits phytosanitaires"
         plant: "Végétaux"
+        plant_food: "Nourriture végétale"
         product: "Produits"
         product_group: "Groupe de produits"
         property_title: "Titre de propriété"
@@ -713,6 +727,7 @@ fra:
         organic_matter: "Matières organiques"
         phytosanitary: "Produits phytosanitaires"
         plant: "Végétaux"
+        plant_food: "Nourriture végétale"
         product: "Produits"
         product_group: "Groupe de produits"
         property_title: "Titre de propriété"
@@ -734,6 +749,7 @@ fra:
         organic_matter: "Matières organiques"
         phytosanitary: "Produits phytosanitaires"
         plant: "Végétaux"
+        plant_food: "Nourriture végétale"
         product: "Produits"
         product_group: "Groupe de produits"
         property_title: "Titre de propriété"
@@ -754,6 +770,7 @@ fra:
         organic_matter: "Matières organiques"
         phytosanitary: "Produits phytosanitaires"
         plant: "Végétaux"
+        plant_food: "Nourriture végétale"
         product: "Produits"
         product_group: "Groupe de produits"
         property_title: "Titre de propriété"
@@ -771,6 +788,7 @@ fra:
         organic_matter: "Matières organiques"
         phytosanitary: "Produits phytosanitaires"
         plant: "Végétaux"
+        plant_food: "Nourriture végétale"
         product: "Produits"
         product_group: "Groupe de produits"
         property_title: "Titre de propriété"
