--- a/config/locales/fra/models.yml
+++ b/config/locales/fra/models.yml
@@ -852,7 +852,7 @@ fra:
     operation_nature: "Type d’operation" #?
     operation_natures: "Types de travail" #?
     operation_task: "Operation task"
-    operation_tasks: "Operation tasks"
+    operation_tasks: "Operation tasks" #?
     operation_uses: "Utilisations d’outil" #?
     operations: "Travaux"
     order: "Vente" #?
