--- a/config/locales/spa/nomenclatures.yml
+++ b/config/locales/spa/nomenclatures.yml
@@ -1210,6 +1210,7 @@ spa:
         # organic_matter: "Matières organiques"
         # phytosanitary: "Produits phytosanitaires"
         # plant: "Végétaux"
+        # plant_food: "Nourriture végétale"
         # product: "Produits"
         # product_group: "Groupe de produits"
         # property_title: "Titre de propriété"
