--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -107,7 +107,7 @@ arb:
       # show: "Prix"
     backend/catalogs:
       # edit: "Modifier le catalogue de prix\_: %{name}"
-      # index: "Catalogue de prix"
+      # index: "Catalogues de prix"
       # new: "Nouveau catalogue de prix"
       # show: "Catalogue de prix\_: %{name}"
     backend/cells/bank_chart_cells: #?
@@ -1033,6 +1033,7 @@ arb:
     # changes_reflected: "Changements répercutés"
     check: "نحقق"
     # check_fields: "Vous devez cocher au moins une case pour effectuer la modification"
+    # children: "Descendance"
     # childrens: "Enfants"
     # choice_options: "Indicateur avec liste de choix"
     choices: "خيارات"
@@ -1251,6 +1252,7 @@ arb:
       zero: "" #?
     iban: "رقم الحساب المصرفي الدولي (IBAN)"
     identification: "اسم ورمز المنتج"
+    # illness: "Maladies"
     # immunoglobulins_concentration: "Concentration en immunoglobulines Gamma"
     import: "استيراد"
     # import_backup: "Import de fichier de sauvegarde"
@@ -1275,6 +1277,7 @@ arb:
     indicator: "لوحة التحكم"
     # indicator_value: "Valeur de l'indicateur"
     # indicators: "Indicateurs"
+    # indicators_evolutions: "Evolutions des indicateurs"
     # inel_index: "Index génétique INEL"
     info: "معرفة المعلومات عن وسائل النقل"
     infos: "معرفة خصائص النظام"
