--- a/config/locales/arb/nomenclatures.yml
+++ b/config/locales/arb/nomenclatures.yml
@@ -1213,6 +1213,7 @@ arb:
         # organic_matter: "Matières organiques"
         # phytosanitary: "Produits phytosanitaires"
         # plant: "Végétaux"
+        # plant_food: "Nourriture végétale"
         # product: "Produits"
         # product_group: "Groupe de produits"
         # property_title: "Titre de propriété"
