--- a/config/locales/spa/action.yml
+++ b/config/locales/spa/action.yml
@@ -109,7 +109,7 @@ spa:
       # show: "Prix"
     backend/catalogs:
       # edit: "Modifier le catalogue de prix\_: %{name}"
-      # index: "Catalogue de prix"
+      # index: "Catalogues de prix"
       # new: "Nouveau catalogue de prix"
       # show: "Catalogue de prix\_: %{name}"
     backend/cells/bank_chart_cells: #?
@@ -517,7 +517,7 @@ spa:
       # show: "Variante de produit\_: %{name}"
     backend/product_natures:
       # edit: "Modifier le type de produit\_: %{name}"
-      # index: "Type de produits"
+      # index: "Types de produits"
       # new: "Nouveau type de produit"
       # show: "Type de produit\_: %{name}"
     backend/product_ownerships: #?
@@ -942,6 +942,7 @@ spa:
     # changes_reflected: "Changements répercutés"
     # check: "Vérifier"
     # check_fields: "Vous devez cocher au moins une case pour effectuer la modification"
+    # children: "Descendance"
     # childrens: "Enfants"
     # choice_options: "Indicateur avec liste de choix"
     # choices: "Choix"
@@ -1138,6 +1139,7 @@ spa:
       # other: "Temps d’utilisation total\_: %{count} heures"
     iban: "Numero de cuento bancario internacional (IBAN)"
     # identification: "Identification"
+    # illness: "Maladies"
     # immunoglobulins_concentration: "Concentration en immunoglobulines Gamma"
     import: "Importación de un  fichero de salvaguardia"
     # import_backup: "Import de fichier de sauvegarde"
@@ -1157,6 +1159,7 @@ spa:
     # indicator: "Indicateur"
     # indicator_value: "Valeur de l'indicateur"
     # indicators: "Indicateurs"
+    # indicators_evolutions: "Evolutions des indicateurs"
     # inel_index: "Index génétique INEL"
     # info: "Information\_: %{value}"
     infos: "Informar las caracteristicas de la entrega"
